# student_helper

./: .flake8  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 6533ddd05218_initial.py  ebfdf9d0878c_initial.py
envs/: main.env
src/core/: config.py
src/db/: session.py
src/db/models/: __init__.py  telegram_contacts.py  user.py
src/repositories/: base.py  telegram_repository.py  user_repository.py
src/schemas/: telegram_user.py  user.py
src/services/: base_api_service.py  schedule_base.py  student_service.py
src/shared/: decorators.py
src/telegram/: main.py  telegram_service.py
src/telegram/handlers/: help_handler.py  schedule_handler.py
src/telegram/schedule/: by_group_name.py  by_reg_num.py  handler.py  test_handl.py
