[tool.poetry]
name = "kuzstu_bot"
version = "0.1.0"
description = ""
authors = ["Burdasov Ilya <smog965@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.12"	# https://github.com/python-telegram-bot/python-telegram-bot
vk-api = "^11.9.7"			    # https://pypi.org/project/vk-api/
requests = "^2.28.0"
alembic = "^1.8.0"
SQLAlchemy = "1.4.35"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
black = "^22.3.0"
flake8 = "^4.0.1"
ipython = "^8.4.0"
watchgod = "^0.8.2"
asyncpg = "^0.25.0"
greenlet = "^1.1.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | frontend
)/
'''

